--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cantata+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jockey+One&display=swap");
+
 @import "tailwindcss";
+
+.headerFont {
+  font-family: "Luckiest Guy", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.secondFont {
+  font-family: "Cantata One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.thirdFont {
+  font-family: "Jockey One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
