--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cantata+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Jockey+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 @import "tailwindcss";
 
 .headerFont {
-  font-family: "Luckiest Guy", serif;
-  font-weight: 400;
+  font-family: "Inter", serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.smallFont {
+  font-family: "Inter", serif;
+  font-weight: 500;
   font-style: normal;
 }
 
